// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getSymbols properties identifiers 1`] = `
Array [
  Object {
    "expression": "obj",
    "location": Object {
      "end": Position {
        "column": 27,
        "line": 1,
      },
      "start": Position {
        "column": 6,
        "line": 1,
      },
    },
    "name": "obj",
  },
  Object {
    "expression": "obj",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 1,
      },
      "start": Position {
        "column": 6,
        "line": 1,
      },
    },
    "name": "obj",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 15,
        "line": 1,
      },
      "start": Position {
        "column": 14,
        "line": 1,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 20,
        "line": 1,
      },
      "start": Position {
        "column": 19,
        "line": 1,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "foo",
    "location": Object {
      "end": Position {
        "column": 33,
        "line": 2,
      },
      "start": Position {
        "column": 6,
        "line": 2,
      },
    },
    "name": "foo",
  },
  Object {
    "expression": "foo",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 2,
      },
      "start": Position {
        "column": 6,
        "line": 2,
      },
    },
    "name": "foo",
  },
  Object {
    "expression": "obj2",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 2,
      },
      "start": Position {
        "column": 12,
        "line": 2,
      },
    },
    "name": "obj2",
  },
  Object {
    "expression": "c",
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 2,
      },
      "start": Position {
        "column": 17,
        "line": 2,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "secondProperty",
    "location": Object {
      "end": Position {
        "column": 33,
        "line": 2,
      },
      "start": Position {
        "column": 19,
        "line": 2,
      },
    },
    "name": "secondProperty",
  },
  Object {
    "expression": "com",
    "location": Object {
      "end": Position {
        "column": 49,
        "line": 5,
      },
      "start": Position {
        "column": 6,
        "line": 5,
      },
    },
    "name": "com",
  },
  Object {
    "expression": "com",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 5,
      },
      "start": Position {
        "column": 6,
        "line": 5,
      },
    },
    "name": "com",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 5,
      },
      "start": Position {
        "column": 15,
        "line": 5,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 5,
      },
      "start": Position {
        "column": 21,
        "line": 5,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "d",
    "location": Object {
      "end": Position {
        "column": 31,
        "line": 5,
      },
      "start": Position {
        "column": 30,
        "line": 5,
      },
    },
    "name": "d",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 43,
        "line": 5,
      },
      "start": Position {
        "column": 42,
        "line": 5,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "app",
    "location": Object {
      "end": Position {
        "column": 3,
        "line": 7,
      },
      "start": Position {
        "column": 0,
        "line": 7,
      },
    },
    "name": "app",
  },
  Object {
    "expression": "TodoView",
    "location": Object {
      "end": Position {
        "column": 12,
        "line": 7,
      },
      "start": Position {
        "column": 4,
        "line": 7,
      },
    },
    "name": "TodoView",
  },
  Object {
    "expression": "Backbone",
    "location": Object {
      "end": Position {
        "column": 23,
        "line": 7,
      },
      "start": Position {
        "column": 15,
        "line": 7,
      },
    },
    "name": "Backbone",
  },
  Object {
    "expression": "extend",
    "location": Object {
      "end": Position {
        "column": 30,
        "line": 7,
      },
      "start": Position {
        "column": 24,
        "line": 7,
      },
    },
    "name": "extend",
  },
  Object {
    "expression": "render",
    "location": Object {
      "end": Position {
        "column": 8,
        "line": 8,
      },
      "start": Position {
        "column": 2,
        "line": 8,
      },
    },
    "name": "render",
  },
  Object {
    "expression": "obj",
    "location": Object {
      "end": Position {
        "column": 3,
        "line": 12,
      },
      "start": Position {
        "column": 0,
        "line": 12,
      },
    },
    "name": "obj",
  },
  Object {
    "expression": "foo",
    "location": Object {
      "end": Position {
        "column": 7,
        "line": 12,
      },
      "start": Position {
        "column": 4,
        "line": 12,
      },
    },
    "name": "foo",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 13,
        "line": 12,
      },
      "start": Position {
        "column": 12,
        "line": 12,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 12,
      },
      "start": Position {
        "column": 17,
        "line": 12,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 12,
      },
      "start": Position {
        "column": 27,
        "line": 12,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "com",
    "location": Object {
      "end": Position {
        "column": 3,
        "line": 13,
      },
      "start": Position {
        "column": 0,
        "line": 13,
      },
    },
    "name": "com",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 13,
      },
      "start": Position {
        "column": 8,
        "line": 13,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 14,
        "line": 13,
      },
      "start": Position {
        "column": 13,
        "line": 13,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 24,
        "line": 13,
      },
      "start": Position {
        "column": 23,
        "line": 13,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res",
    "location": Object {
      "end": Position {
        "column": 32,
        "line": 16,
      },
      "start": Position {
        "column": 6,
        "line": 16,
      },
    },
    "name": "res",
  },
  Object {
    "expression": "res",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 16,
      },
      "start": Position {
        "column": 6,
        "line": 16,
      },
    },
    "name": "res",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 16,
      },
      "start": Position {
        "column": 15,
        "line": 16,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 26,
        "line": 16,
      },
      "start": Position {
        "column": 25,
        "line": 16,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res2",
    "location": Object {
      "end": Position {
        "column": 30,
        "line": 17,
      },
      "start": Position {
        "column": 6,
        "line": 17,
      },
    },
    "name": "res2",
  },
  Object {
    "expression": "res2",
    "location": Object {
      "end": Position {
        "column": 10,
        "line": 17,
      },
      "start": Position {
        "column": 6,
        "line": 17,
      },
    },
    "name": "res2",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 17,
      },
      "start": Position {
        "column": 15,
        "line": 17,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 17,
      },
      "start": Position {
        "column": 21,
        "line": 17,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res3",
    "location": Object {
      "end": Position {
        "column": 45,
        "line": 18,
      },
      "start": Position {
        "column": 6,
        "line": 18,
      },
    },
    "name": "res3",
  },
  Object {
    "expression": "res3",
    "location": Object {
      "end": Position {
        "column": 10,
        "line": 18,
      },
      "start": Position {
        "column": 6,
        "line": 18,
      },
    },
    "name": "res3",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 18,
      },
      "start": Position {
        "column": 15,
        "line": 18,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 18,
      },
      "start": Position {
        "column": 21,
        "line": 18,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 31,
        "line": 18,
      },
      "start": Position {
        "column": 30,
        "line": 18,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "c",
    "location": Object {
      "end": Position {
        "column": 37,
        "line": 18,
      },
      "start": Position {
        "column": 36,
        "line": 18,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "res4",
    "location": Object {
      "end": Position {
        "column": 45,
        "line": 19,
      },
      "start": Position {
        "column": 6,
        "line": 19,
      },
    },
    "name": "res4",
  },
  Object {
    "expression": "res4",
    "location": Object {
      "end": Position {
        "column": 10,
        "line": 19,
      },
      "start": Position {
        "column": 6,
        "line": 19,
      },
    },
    "name": "res4",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 19,
      },
      "start": Position {
        "column": 17,
        "line": 19,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 30,
        "line": 19,
      },
      "start": Position {
        "column": 29,
        "line": 19,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 33,
        "line": 19,
      },
      "start": Position {
        "column": 32,
        "line": 19,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 35,
        "line": 19,
      },
      "start": Position {
        "column": 34,
        "line": 19,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "c",
    "location": Object {
      "end": Position {
        "column": 37,
        "line": 19,
      },
      "start": Position {
        "column": 36,
        "line": 19,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "v",
    "location": Object {
      "end": Position {
        "column": 39,
        "line": 19,
      },
      "start": Position {
        "column": 38,
        "line": 19,
      },
    },
    "name": "v",
  },
  Object {
    "expression": "d",
    "location": Object {
      "end": Position {
        "column": 41,
        "line": 19,
      },
      "start": Position {
        "column": 40,
        "line": 19,
      },
    },
    "name": "d",
  },
  Object {
    "expression": undefined,
    "location": Object {
      "end": Position {
        "column": 35,
        "line": 22,
      },
      "start": Position {
        "column": 6,
        "line": 22,
      },
    },
    "name": undefined,
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 22,
      },
      "start": Position {
        "column": 8,
        "line": 22,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 22,
      },
      "start": Position {
        "column": 8,
        "line": 22,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "resty",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 22,
      },
      "start": Position {
        "column": 11,
        "line": 22,
      },
    },
    "name": "resty",
  },
  Object {
    "expression": "resty",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 22,
      },
      "start": Position {
        "column": 11,
        "line": 22,
      },
    },
    "name": "resty",
  },
  Object {
    "expression": "compute",
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 22,
      },
      "start": Position {
        "column": 21,
        "line": 22,
      },
    },
    "name": "compute",
  },
  Object {
    "expression": "stuff",
    "location": Object {
      "end": Position {
        "column": 34,
        "line": 22,
      },
      "start": Position {
        "column": 29,
        "line": 22,
      },
    },
    "name": "stuff",
  },
  Object {
    "expression": undefined,
    "location": Object {
      "end": Position {
        "column": 35,
        "line": 23,
      },
      "start": Position {
        "column": 6,
        "line": 23,
      },
    },
    "name": undefined,
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 8,
        "line": 23,
      },
      "start": Position {
        "column": 7,
        "line": 23,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "rest",
    "location": Object {
      "end": Position {
        "column": 17,
        "line": 23,
      },
      "start": Position {
        "column": 13,
        "line": 23,
      },
    },
    "name": "rest",
  },
  Object {
    "expression": "compute",
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 23,
      },
      "start": Position {
        "column": 21,
        "line": 23,
      },
    },
    "name": "compute",
  },
  Object {
    "expression": "stuff",
    "location": Object {
      "end": Position {
        "column": 34,
        "line": 23,
      },
      "start": Position {
        "column": 29,
        "line": 23,
      },
    },
    "name": "stuff",
  },
  Object {
    "expression": "params",
    "location": Object {
      "end": Position {
        "column": 15,
        "line": 25,
      },
      "start": Position {
        "column": 9,
        "line": 25,
      },
    },
    "name": "params",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 19,
        "line": 25,
      },
      "start": Position {
        "column": 18,
        "line": 25,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 19,
        "line": 25,
      },
      "start": Position {
        "column": 18,
        "line": 25,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 25,
      },
      "start": Position {
        "column": 21,
        "line": 25,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 25,
      },
      "start": Position {
        "column": 21,
        "line": 25,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "pars",
    "location": Object {
      "end": Position {
        "column": 32,
        "line": 26,
      },
      "start": Position {
        "column": 4,
        "line": 26,
      },
    },
    "name": "pars",
  },
  Object {
    "expression": "pars",
    "location": Object {
      "end": Position {
        "column": 8,
        "line": 26,
      },
      "start": Position {
        "column": 4,
        "line": 26,
      },
    },
    "name": "pars",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 23,
        "line": 26,
      },
      "start": Position {
        "column": 22,
        "line": 26,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 23,
        "line": 26,
      },
      "start": Position {
        "column": 22,
        "line": 26,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 26,
        "line": 26,
      },
      "start": Position {
        "column": 25,
        "line": 26,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 26,
        "line": 26,
      },
      "start": Position {
        "column": 25,
        "line": 26,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "evil",
    "location": Object {
      "end": Position {
        "column": 43,
        "line": 27,
      },
      "start": Position {
        "column": 6,
        "line": 27,
      },
    },
    "name": "evil",
  },
  Object {
    "expression": "evil",
    "location": Object {
      "end": Position {
        "column": 10,
        "line": 27,
      },
      "start": Position {
        "column": 6,
        "line": 27,
      },
    },
    "name": "evil",
  },
  Object {
    "expression": "obj2",
    "location": Object {
      "end": Position {
        "column": 17,
        "line": 27,
      },
      "start": Position {
        "column": 13,
        "line": 27,
      },
    },
    "name": "obj2",
  },
  Object {
    "expression": "doEvil",
    "location": Object {
      "end": Position {
        "column": 24,
        "line": 27,
      },
      "start": Position {
        "column": 18,
        "line": 27,
      },
    },
    "name": "doEvil",
  },
  Object {
    "expression": "c",
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 27,
      },
      "start": Position {
        "column": 27,
        "line": 27,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "secondProperty",
    "location": Object {
      "end": Position {
        "column": 43,
        "line": 27,
      },
      "start": Position {
        "column": 29,
        "line": 27,
      },
    },
    "name": "secondProperty",
  },
]
`;

exports[`Parser.getSymbols properties members 1`] = `
Array [
  Object {
    "expression": "obj2.c.secondProperty",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 33,
        "line": 2,
      },
      "start": Position {
        "column": 12,
        "line": 2,
      },
    },
    "location": Object {
      "end": Position {
        "column": 33,
        "line": 2,
      },
      "start": Position {
        "column": 19,
        "line": 2,
      },
    },
    "name": "secondProperty",
  },
  Object {
    "expression": "obj2.c",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 18,
        "line": 2,
      },
      "start": Position {
        "column": 12,
        "line": 2,
      },
    },
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 2,
      },
      "start": Position {
        "column": 17,
        "line": 2,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "app.TodoView",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 12,
        "line": 7,
      },
      "start": Position {
        "column": 0,
        "line": 7,
      },
    },
    "location": Object {
      "end": Position {
        "column": 12,
        "line": 7,
      },
      "start": Position {
        "column": 4,
        "line": 7,
      },
    },
    "name": "TodoView",
  },
  Object {
    "expression": "Backbone.extend",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 30,
        "line": 7,
      },
      "start": Position {
        "column": 15,
        "line": 7,
      },
    },
    "location": Object {
      "end": Position {
        "column": 30,
        "line": 7,
      },
      "start": Position {
        "column": 24,
        "line": 7,
      },
    },
    "name": "extend",
  },
  Object {
    "expression": "obj.foo",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 12,
      },
      "start": Position {
        "column": 0,
        "line": 12,
      },
    },
    "location": Object {
      "end": Position {
        "column": 7,
        "line": 12,
      },
      "start": Position {
        "column": 4,
        "line": 12,
      },
    },
    "name": "foo",
  },
  Object {
    "expression": "a.b.c.v.d",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 41,
        "line": 19,
      },
      "start": Position {
        "column": 32,
        "line": 19,
      },
    },
    "location": Object {
      "end": Position {
        "column": 41,
        "line": 19,
      },
      "start": Position {
        "column": 40,
        "line": 19,
      },
    },
    "name": "d",
  },
  Object {
    "expression": "a.b.c.v",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 39,
        "line": 19,
      },
      "start": Position {
        "column": 32,
        "line": 19,
      },
    },
    "location": Object {
      "end": Position {
        "column": 39,
        "line": 19,
      },
      "start": Position {
        "column": 38,
        "line": 19,
      },
    },
    "name": "v",
  },
  Object {
    "expression": "a.b.c",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 37,
        "line": 19,
      },
      "start": Position {
        "column": 32,
        "line": 19,
      },
    },
    "location": Object {
      "end": Position {
        "column": 37,
        "line": 19,
      },
      "start": Position {
        "column": 36,
        "line": 19,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "a.b",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 35,
        "line": 19,
      },
      "start": Position {
        "column": 32,
        "line": 19,
      },
    },
    "location": Object {
      "end": Position {
        "column": 35,
        "line": 19,
      },
      "start": Position {
        "column": 34,
        "line": 19,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 43,
        "line": 27,
      },
      "start": Position {
        "column": 13,
        "line": 27,
      },
    },
    "location": Object {
      "end": Position {
        "column": 43,
        "line": 27,
      },
      "start": Position {
        "column": 29,
        "line": 27,
      },
    },
    "name": "secondProperty",
  },
  Object {
    "expression": "",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 28,
        "line": 27,
      },
      "start": Position {
        "column": 13,
        "line": 27,
      },
    },
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 27,
      },
      "start": Position {
        "column": 27,
        "line": 27,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "obj2.doEvil",
    "expressionLocation": SourceLocation {
      "end": Position {
        "column": 24,
        "line": 27,
      },
      "start": Position {
        "column": 13,
        "line": 27,
      },
    },
    "location": Object {
      "end": Position {
        "column": 24,
        "line": 27,
      },
      "start": Position {
        "column": 18,
        "line": 27,
      },
    },
    "name": "doEvil",
  },
]
`;

exports[`Parser.getSymbols properties properties 1`] = `
Array [
  Object {
    "expression": "obj.a",
    "location": Object {
      "end": Position {
        "column": 15,
        "line": 1,
      },
      "start": Position {
        "column": 14,
        "line": 1,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "obj.a.b",
    "location": Object {
      "end": Position {
        "column": 20,
        "line": 1,
      },
      "start": Position {
        "column": 19,
        "line": 1,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "com[a]",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 5,
      },
      "start": Position {
        "column": 15,
        "line": 5,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "com[a].b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 5,
      },
      "start": Position {
        "column": 21,
        "line": 5,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "com[a][d]",
    "location": Object {
      "end": Position {
        "column": 31,
        "line": 5,
      },
      "start": Position {
        "column": 30,
        "line": 5,
      },
    },
    "name": "d",
  },
  Object {
    "expression": "com[b]",
    "location": Object {
      "end": Position {
        "column": 43,
        "line": 5,
      },
      "start": Position {
        "column": 42,
        "line": 5,
      },
    },
    "name": "b",
  },
  Object {
    "expression": undefined,
    "location": Object {
      "end": Position {
        "column": 8,
        "line": 8,
      },
      "start": Position {
        "column": 2,
        "line": 8,
      },
    },
    "name": "render",
  },
  Object {
    "expression": "obj.foo.a",
    "location": Object {
      "end": Position {
        "column": 13,
        "line": 12,
      },
      "start": Position {
        "column": 12,
        "line": 12,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "obj.foo.a.b",
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 12,
      },
      "start": Position {
        "column": 17,
        "line": 12,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "obj.foo.b",
    "location": Object {
      "end": Position {
        "column": 28,
        "line": 12,
      },
      "start": Position {
        "column": 27,
        "line": 12,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "com.a",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 13,
      },
      "start": Position {
        "column": 8,
        "line": 13,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "com.a.b",
    "location": Object {
      "end": Position {
        "column": 14,
        "line": 13,
      },
      "start": Position {
        "column": 13,
        "line": 13,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "com.b",
    "location": Object {
      "end": Position {
        "column": 24,
        "line": 13,
      },
      "start": Position {
        "column": 23,
        "line": 13,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res[0].a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 16,
      },
      "start": Position {
        "column": 15,
        "line": 16,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "res[1].b",
    "location": Object {
      "end": Position {
        "column": 26,
        "line": 16,
      },
      "start": Position {
        "column": 25,
        "line": 16,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res2.a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 17,
      },
      "start": Position {
        "column": 15,
        "line": 17,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "res2.a[0].b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 17,
      },
      "start": Position {
        "column": 21,
        "line": 17,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res3.a",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 18,
      },
      "start": Position {
        "column": 15,
        "line": 18,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "res3.a[0].b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 18,
      },
      "start": Position {
        "column": 21,
        "line": 18,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res3.b",
    "location": Object {
      "end": Position {
        "column": 31,
        "line": 18,
      },
      "start": Position {
        "column": 30,
        "line": 18,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "res3.b[0].c",
    "location": Object {
      "end": Position {
        "column": 37,
        "line": 18,
      },
      "start": Position {
        "column": 36,
        "line": 18,
      },
    },
    "name": "c",
  },
  Object {
    "expression": "res4[0].a",
    "location": Object {
      "end": Position {
        "column": 18,
        "line": 19,
      },
      "start": Position {
        "column": 17,
        "line": 19,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "res4[0].b",
    "location": Object {
      "end": Position {
        "column": 30,
        "line": 19,
      },
      "start": Position {
        "column": 29,
        "line": 19,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 9,
        "line": 22,
      },
      "start": Position {
        "column": 8,
        "line": 22,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "resty",
    "location": Object {
      "end": Position {
        "column": 16,
        "line": 22,
      },
      "start": Position {
        "column": 11,
        "line": 22,
      },
    },
    "name": "resty",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 19,
        "line": 25,
      },
      "start": Position {
        "column": 18,
        "line": 25,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 22,
        "line": 25,
      },
      "start": Position {
        "column": 21,
        "line": 25,
      },
    },
    "name": "b",
  },
  Object {
    "expression": "a",
    "location": Object {
      "end": Position {
        "column": 23,
        "line": 26,
      },
      "start": Position {
        "column": 22,
        "line": 26,
      },
    },
    "name": "a",
  },
  Object {
    "expression": "b",
    "location": Object {
      "end": Position {
        "column": 26,
        "line": 26,
      },
      "start": Position {
        "column": 25,
        "line": 26,
      },
    },
    "name": "b",
  },
]
`;
